[package]
name = "tram"
authors = [
    "Andrea Coronese <sixpounder@protonmail.com>"
]
version = "0.1.0"
edition = "2021"
license_file = "LICENSE.txt"
description = "A simple event bus that can be cloned and shared across threads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
