[package]
name = "tram"
authors = [
    "Andrea Coronese <sixpounder@protonmail.com>"
]
repository = "https://github.com/sixpounder/tram"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0"
description = "A simple event bus that can be cloned and shared across threads"
keywords = ["bus", "events"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]